# Recall

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  Recall.flatpak  build.rs  io.basshift.Recall.yaml  io.github.basshift.Recall.flathub.yaml  io.github.basshift.Recall.yaml
data/: io.basshift.Recall.desktop  io.basshift.Recall.metainfo.xml  io.github.basshift.Recall.desktop  io.github.basshift.Recall.metainfo.xml  resources.gresource.xml  style.css  style.dark.css  style.light.css  style.mobile.css  style.vars.css
data/icons/hicolor/: index.theme
po/: es.po  io.github.basshift.Recall.pot  pt_BR.po
repo/: summary  summary.idx
repo/refs/heads/app/io.basshift.Recall/x86_64/: master
scripts/: i18n_update.py
src/: i18n.rs  main.rs
src/ui/: app.rs  board.rs  classic.rs  classic_penalties.rs  debug_tools.rs  dialogs.rs  hud.rs  infinite.rs  infinite_flow.rs  mod.rs  mode_dialogs.rs  records.rs  scene.rs  session_save.rs  state.rs  tri.rs  tri_penalties.rs  trio.rs  trio_penalties.rs
