[package]
name = "recall"
version = "1.0.0"
edition = "2024"

[dependencies]
cairo-rs = "0.21.5"
gio = "0.21.5"
glib = "0.21.5"
gettextrs = { version = "0.7", package = "gettext-rs" }
gtk4 = "0.10.3"
libadwaita = { version = "0.8.1", features = ["v1_7"] }
rand = "0.9.0"
pangocairo = "0.21.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
